2000-08-23  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-group.el (gnus-group-rename-group): Inhibit renaming of
	zombie or killed groups.

2000-08-21  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnheader.el (nnheader-replace-chars-in-string): Use
	`static-if'.
	* lisp/message.el (message-replace-chars-in-string): Ditto.

2000-08-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-type-definition): Follow changes of
	ZDNet.
	(nnshimbun-make-text-or-html-contents): Ditto.
	(nnshimbun-make-html-contents): Ditto.

2000-08-18  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
            Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* lisp/nnshimbun.el: Add `mew' and `xemacs' support.

2000-08-17  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el (dgnushack-texi-format): Require `ptexinfmt'
	instead of `texinfmt'.
	(dgnushack-install-package): Don't install ptexinfmt.el.
	(dgnushack-make-package): Don't include ptexinfmt.el in MANIFEST.
	(dgnushack-compile): Don't compile dgnushack.el nor ptexinfmt.el.
	(dgnushack-unexported-files, dgnushack-tool-files): New constants.

	* lisp/Makefile.in (install-package): No need to remove
	dgnushack.elc.
	(install): Don't install ptexinfmt.el; no need to remove
	dgnushack.elc.

	* lisp/ptexinfmt.el: New file imported from Wanderlust.

2000-08-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nntp.el (nntp-open-telnet): Wait for the telnet prompt
	before sending a command; allow the rtelnet prompt as well.

	* lisp/message.el (message-make-forward-subject): Remove garbage
	line.

2000-08-01  Katsumi Yamaoka <yamaoka@jpl.org>

	* configure: Regenerate.
	* aclocal.m4 (AC_CHECK_EMACS): Unset `EMACS' environment variable
	if it is `t'.

2000-07-24  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 03.

	* configure: Regenerate with autoconf v2.14.1.

	* configure.in: Rewrite for using new macros in aclocal.m4.
